Removed male and female analysis.Changed the object of male and female analysis in measurement analysis from analysis to achillesresultlistresponse.

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -603,11 +603,11 @@ definitions:
       maleAnalysis:
         description: measurement male analysis
         type: object
-        $ref: "#/definitions/Analysis"
+        $ref: "#/definitions/AchillesResultListResponse"
       femaleAnalysis:
         description: measurement female analysis
         type: object
-        $ref: "#/definitions/Analysis"
+        $ref: "#/definitions/AchillesResultListResponse"
       ageAnalysis:
         description: measurement age analysis
         type: object
