Analysis change for measurement gender results

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -530,11 +530,11 @@ definitions:
       measurementValueMaleAnalysis:
         description: male analysis for measurement values
         type: object
-        $ref: "#/definitions/AchillesResultListResponse"
+        $ref: "#/definitions/Analysis"
       measurementValueFemaleAnalysis:
         description: female analysis for measurement values
         type: object
-        $ref: "#/definitions/AchillesResultListResponse"
+        $ref: "#/definitions/Analysis"
       measurementValueAgeAnalysis:
         description: age analysis for measurement values
         type: object
