--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -527,6 +527,10 @@ definitions:
         description: ethnicity analysis
         type: object
         $ref: "#/definitions/Analysis"
+      measurementValueGenderAnalysis:
+        description: measurement value gender analysis
+        type: object
+        $ref: "#/definitions/Analysis"
       measurementValueMaleAnalysis:
         description: male analysis for measurement values
         type: object
