--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -72,27 +72,6 @@ paths:
           schema:
             $ref: "#/definitions/ConceptAnalysisListResponse"
 
-  /v1/databrowser/measurement-analysis-results:
-    get:
-      security: []
-      tags:
-        - dataBrowser
-      description: Gets analysis results for measurement
-      operationId: "getMeasurementAnalysisResults"
-      parameters:
-        - in: query
-          name: concept-ids
-          type: array
-          items:
-            type: string
-          required: true
-          description: concept id
-      responses:
-        200:
-          description: A collection of analysis for measurement
-          schema:
-            $ref: "#/definitions/MeasurementAnalysisListResponse"
-
   /v1/databrowser/participant-count:
     get:
       security: []
@@ -188,6 +167,7 @@ paths:
           description: A collection of domain filters
           schema:
             $ref: "#/definitions/DbDomainListResponse"
+
 
   /v1/databrowser/survey-list:
     get:
@@ -539,6 +519,34 @@ definitions:
         description: age analysis
         type: object
         $ref: "#/definitions/Analysis"
+      raceAnalysis:
+        description: race analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      ethnicityAnalysis:
+        description: ethnicity analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueGenderAnalysis:
+        description: measurement value gender analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueMaleAnalysis:
+        description: male analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueFemaleAnalysis:
+        description: female analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueOtherGenderAnalysis:
+        description: other gender analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueAgeAnalysis:
+        description: age analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
 
   ConceptAnalysisListResponse:
     type: object
@@ -549,38 +557,6 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/ConceptAnalysis"
-
-  MeasurementAnalysis:
-    type: object
-    required:
-      - conceptId
-    properties:
-      conceptId:
-        description: concept id
-        type: string
-      maleAnalysis:
-        description: measurement male analysis
-        type: object
-        $ref: "#/definitions/Analysis"
-      femaleAnalysis:
-        description: measurement female analysis
-        type: object
-        $ref: "#/definitions/Analysis"
-      ageAnalysis:
-        description: measurement age analysis
-        type: object
-        $ref: "#/definitions/Analysis"
-
-  MeasurementAnalysisListResponse:
-    type: object
-    required:
-      - items
-    properties:
-      items:
-        type: array
-        items:
-          $ref: "#/definitions/MeasurementAnalysis"
-
 
   StandardConceptFilter:
     type: string
