addressing some PR comments

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -277,7 +277,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-  /v1/update-page-visits:
+  /v1/page-visits:
     post:
       tags:
       - profile
@@ -286,7 +286,7 @@ paths:
       parameters:
         - in: body
           name: pageVisit
-          description: the new pageVisit to add or update
+          description: the users pageVisits
           schema:
             $ref: "#/definitions/PageVisit"
       responses:
@@ -296,24 +296,6 @@ paths:
           description: Bad request
           schema:
             $ref: "#/definitions/ErrorResponse"
-
-  /v1/get-page-visits:
-    get:
-      tags:
-      - profile
-      description: Gets a users page visits
-      operationId: getPageVisits
-      responses:
-        200:
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/PageVisit'
-        404:
-          description: User Not Found
-        500:
-          description: Internal Server Error
 
   # TODO: add signature / other state?
   /v1/account/accept-terms-of-service:
