RW-1028 create custom class for sorting string columns as ints

--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -730,10 +730,7 @@ definitions:
         description: The date of the event
       numMentions:
         type: string
-        description: Number of mentions in string format
-      numMentionsInt:
-        type: integer
-        description: Number of mentions in number format
+        description: Number of mentions
       domainType:
         $ref: "#/definitions/DomainType"
 
