--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -41,5 +41,8 @@
   "mandrill": {
     "fromEmail": "donotreply@researchallofus.org",
     "sendRetries": 3
+  },
+  "userRecentResourceConfig": {
+    "userEntrycount":10
   }
 }
