Concept synonym fetch

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -574,7 +574,7 @@ definitions:
   MatchType:
     type: string
     description: match column type on concept search
-    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME]
+    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME, CONCEPT_SYNONYM]
 
   SearchConceptsRequest:
     type: object
