[RW-1028][risk=no] CB Review detail tables clean-up (#1068)
* RW-1028 change ppi tab to survey

* RW-1028 add formatting for date columns

* RW-1028 filter numMentions column as number instead of string

* RW-1028 create custom class for sorting string columns as ints

* RW-1028 format all date columns

* RW-1028 modify column sorting class

* [RW-1102][risk=no] create yaml contract for Labs api calls(autocomplete and tree sub search) (#1069)

* RW-1071 adding labs tree.

* RW-1102 added api calls for labs autocomplete and subtree search.

* RW-1102 changed description.

* RW-1028 change ppi tab to survey

* RW-1028 add formatting for date columns

* RW-1028 filter numMentions column as number instead of string

* RW-1028 create custom class for sorting string columns as ints

* RW-1028 format all date columns

* RW-1028 modify column sorting class

--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -728,6 +728,9 @@ definitions:
       itemDate:
         type: string
         description: The date of the event
+      numMentions:
+        type: string
+        description: Number of mentions
       domainType:
         $ref: "#/definitions/DomainType"
 
