--- a/public-api/src/test/resources/application.properties
+++ b/public-api/src/test/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.pmiops.workbench.cdr.CommonTestDialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
