[RW-1022][Risk=no] Help tip/Page visit implementation (#1045)
* api part

* little more api/db + UI

* de-linting

* tweaking colors a bit

* attempting to fix test

* forgot this

* another try?

* ok, think I got it this time

* trying this while updating other code

* removing toggle, adding helptip with new implementation to notebook about page

* remove stylings no longer needed

* forgot to add this stub

* should stop being so lazy

* forgot to add profile service stub to notebook list specs

* PR comments

* remove unused variable

* small tweak

* de-linting

* addressing some PR comments

* addressing more PR comments

* fixing things

* addressing more PR comments

* clean up for codacy

* last of current PR comments

* de-linting

* addressing further pr comments

* forgot to remove this

* trying something

* reverting change

* fix?

* more PR comments

* de-linting

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -277,6 +277,28 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
+  /v1/page-visits:
+    post:
+      tags:
+      - profile
+      description: Updates a users page visits
+      operationId: updatePageVisits
+      parameters:
+        - in: body
+          name: pageVisit
+          description: the users pageVisits
+          schema:
+            $ref: "#/definitions/PageVisit"
+      responses:
+        200:
+          description: The user's profile.
+          schema:
+            $ref: "#/definitions/Profile"
+        400:
+          description: Bad request
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   # TODO: add signature / other state?
   /v1/account/accept-terms-of-service:
     post:
@@ -950,6 +972,18 @@ definitions:
         REVIEW_ID_VERIFICATION
     ]
 
+  PageVisit:
+    type: object
+    properties:
+      userId:
+        type: integer
+        format: int64
+      page:
+        type: string
+      firstVisit:
+        type: integer
+        format: int64
+
   WorkspaceListResponse:
     type: object
     required:
@@ -1369,6 +1403,11 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Authority"
+      pageVisits:
+        description: pages user has visited
+        type: "array"
+        items:
+          $ref: "#/definitions/PageVisit"
       idVerificationStatus:
         $ref: "#/definitions/IdVerificationStatus"
         description: Status of ID verification
