--- a/api/build.gradle
+++ b/api/build.gradle
@@ -274,7 +274,7 @@ dependencies {
   compile 'javax.inject:javax.inject:1'
   compile 'io.swagger:swagger-annotations:1.5.16'
   compile 'org.apache.commons:commons-lang3:3.0'
-  compile 'com.google.guava:guava:22.0'
+  compile 'com.google.guava:guava:25.1-jre'
   compile 'org.springframework.retry:spring-retry:1.1.5.RELEASE'
 
   // https://github.com/GoogleCloudPlatform/google-cloud-java/issues/1502
