RW-1072-criteria-attributes adding attributes table.

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -376,6 +376,9 @@ definitions:
       hasAttributes:
         description: specifies if extra attributes are needed
         type: boolean
+      path:
+        description: full path from parent to this node with ids
+        type: string
 
   CriteriaAttributeListResponse:
     type: object
