[RW-1006][Risk=no] Styling upgrades and fullname on share

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1054,6 +1054,10 @@ definitions:
     properties:
       email:
         type: string
+      givenName:
+        type: string
+      familyName:
+        type: string
       role:
         $ref: "#/definitions/WorkspaceAccessLevel"
 
