--- a/public-api/src/main/resources/application.properties
+++ b/public-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Uncomment the following to turn on full SQL debugging
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
