[RW-1072][risk=no] adding the rebuilt criteria tree and api call for criteria attributes. (#1109)
* RW-1072-criteria-attributes

* RW-1072-criteria-attributes adding new trees and removing predefined attributes.

* RW-1072-criteria-attributes adding attributes table.

* RW-1072-criteria-attributes add new tables

* RW-1072 implemented api call for criteria attributes.

* RW-1072 fixing ui

* RW-1072 fixing data.

* RW-1072 updated id.

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -326,7 +326,6 @@ definitions:
       - group
       - selectable
       - hasAttribute
-      - predefinedAttributes
     properties:
       id:
         description: id of the criteria
@@ -377,10 +376,9 @@ definitions:
       hasAttributes:
         description: specifies if extra attributes are needed
         type: boolean
-      predefinedAttributes:
-        type: array
-        items:
-          $ref: "#/definitions/Attribute"
+      path:
+        description: full path from parent to this node with ids
+        type: string
 
   CriteriaAttributeListResponse:
     type: object
