--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -872,6 +872,18 @@ paths:
           schema:
             $ref: '#/definitions/EmptyResponse'
 
+  /v1/workspaces/user-recent-resources:
+    get:
+      tags:
+        - userMetrics
+      description: Returns the resources accessed by user order by access time desc
+      operationId: getUserMetrics
+      responses:
+        200:
+          description: A list of resources order by last access time desc order
+          schema:
+            $ref: "#/definitions/RecentResourceResponse"
+
 ##########################################################################################
 ## DEFINITIONS
 ##########################################################################################
@@ -1669,3 +1681,30 @@ definitions:
         format: int32
         description: >
           Number of clusters deleted during the check.
+
+
+  RecentResourceResponse:
+    type: array
+    items:
+      $ref: "#/definitions/RecentResource"
+
+  RecentResource:
+    type: object
+    properties:
+      name:
+        type: string
+      type:
+        type: string
+      modifiedTime:
+        type: string
+      description:
+        type: string
+      workspaceId:
+        type: integer
+        format: int64
+      cohortId:
+        type: integer
+        format: int64
+      permission:
+        type: string
+
